# be-webhook

./: .dockerignore  .env.example  .gitignore  Dockerfile  IniBukanBuatHackathon.json  README.md  pyproject.toml
.github/workflows/: deploy-huggingface-space.yml
app/: __init__.py  cloudinary.py  config.py  main.py  models.py  services.py  workflow.py
scripts/: upload_cloudinary_test.py
tests/: test_workflow.py
