[project]
name = "gungfi-webhook-be"
version = "0.1.0"
description = "FastAPI backend for forwarding Cloudinary webhooks to the AI pipeline and Supabase."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "respx>=0.21.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
